// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmountsVsProgramRegionCli init() should persist amounts vs program region collection: Snapshot init 1`] = `
[
  {
    "_id": Any<ObjectId>,
    "exerciceBudgetaire": 2023,
    "mission": "Mission Exemple",
    "montant": 96988.3,
    "programme": "101 - Programme Exemple",
    "regionAttachementComptable": "Bretagne",
  },
  {
    "_id": Any<ObjectId>,
    "exerciceBudgetaire": 2023,
    "mission": "Mission Exemple",
    "montant": 130000,
    "programme": "1234 - Programme Exemple",
    "regionAttachementComptable": "Bretagne",
  },
  {
    "_id": Any<ObjectId>,
    "exerciceBudgetaire": 2021,
    "mission": "Mission Exemple",
    "montant": 68000,
    "programme": "101 - Programme Exemple",
    "regionAttachementComptable": "Normandie",
  },
  {
    "_id": Any<ObjectId>,
    "exerciceBudgetaire": 2024,
    "mission": "Mission Exemple",
    "montant": 34000,
    "programme": "101 - Programme Exemple",
    "regionAttachementComptable": "Normandie",
  },
]
`;

exports[`AmountsVsProgramRegionCli resyncExercice() should persist amounts vs program region collection for the given exercice: Snapshot resyncExercice 1`] = `
[
  {
    "_id": Any<ObjectId>,
    "exerciceBudgetaire": 2023,
    "mission": "Mission Exemple",
    "montant": 96988.3,
    "programme": "101 - Programme Exemple",
    "regionAttachementComptable": "Bretagne",
  },
  {
    "_id": Any<ObjectId>,
    "exerciceBudgetaire": 2023,
    "mission": "Mission Exemple",
    "montant": 130000,
    "programme": "1234 - Programme Exemple",
    "regionAttachementComptable": "Bretagne",
  },
]
`;
